@@ -273,8 +273,7 @@ Editableform is linked with one of input types, e.g. 'text', 'select' etc.
                     return $.ajax($.extend({
                         url     : this.options.url,
                         data    : params,
-                        type    : 'post',
-                        dataType: 'json'
+                        type    : 'POST'
                     }, this.options.ajaxOptions));
                 }
             }
